--- a/ServiceAgreement.adoc
+++ b/ServiceAgreement.adoc
@@ -90,7 +90,7 @@
 .【瑕疵担保責任】
 第４条 本規約請負条第２条の検収完了後、納品物に瑕疵が発見された場合、甲および乙は、瑕疵の原因について協議・調査するものとします。協議・調査の結果、当該瑕疵が乙の責に帰すものであると認められた場合、甲は乙に対して当該瑕疵の修正を請求することができ、乙は、当該瑕疵を修正するものとします。なお、乙が係る修正責任を負うのは、検収完了後９０日以内に甲から請求がなされた場合に限るものとします。
 
-== 準委任契約条項
+== 準委任条項
 
 .【業務の遂行】
 第１条　乙は、個別業務を発注書、プロジェクト計画書または仕様書、打ち合わせ、甲乙の協議等に従い処理し、定期的に甲に対して業務遂行状況の報告を行い、承認を得ます。
