請負条項第4条の見直し

--- a/ServiceAgreement.adoc
+++ b/ServiceAgreement.adoc
@@ -87,8 +87,8 @@
 .【危険負担】
 第３条　納入物の滅失、毀損等の危険負担は、納入前については乙が、納入後については甲が、それぞれこれを負担するものとします。
 
-.【瑕疵担保責任】
-第４条 本規約請負条第２条の検収完了後、納品物に瑕疵が発見された場合、甲および乙は、瑕疵の原因について協議・調査するものとします。協議・調査の結果、当該瑕疵が乙の責に帰すものであると認められた場合、甲は乙に対して当該瑕疵の修正を請求することができ、乙は、当該瑕疵を修正するものとします。なお、乙が係る修正責任を負うのは、検収完了後９０日以内に甲から請求がなされた場合に限るものとします。
+.【不適合】
+第４条 本規約請負条第２条の検収完了後、納品物に不適合が発見された場合、甲および乙は、不適合の原因について協議・調査するものとします。協議・調査の結果、当該不適合が乙の責に帰すものであると認められた場合、甲は乙に対して当該不適合の修補を請求することができ、乙は、当該不適合を修補するものとします。なお、乙が係る修補の責任を負うのは、検収完了後６ヶ月以内に甲から請求がなされた場合に限るものとします。
 
 == 準委任条項
 
@@ -101,3 +101,5 @@
 
 附則 +
 本規約は平成２８年１０月１日から施行します。
+
+令和３年４月１日改定
